<resources>
    <string name="app_name">Ejercicio08_CardView_CalculoComensales</string>
    <string name="cuenta">Cuenta</string>
    <string name="propina">Propina</string>
    <string name="porcentajeProp">% Prop.</string>
    <string name="total">Total</string>
    <string name="limpiar">Limpiar</string>
    <string name="redondear">Redondear</string>
    <string name="comensales">Comensales</string>
    <string name="porComensal">Por comensal</string>
</resources>
